Fix extra margin for Prism.js code output

--- a/styles.css
+++ b/styles.css
@@ -436,6 +436,7 @@ body {
   justify-content: stretch;
   width: 100%;
   min-height: 100%;
+  margin: 0 !important;
 }
 
 .preview code {
